incorporacion navbar Contactos y Tarjeta

--- a/GraveFinderCabron/gravefinder/Paginas/Tarjeta/index.html
+++ b/GraveFinderCabron/gravefinder/Paginas/Tarjeta/index.html
@@ -15,7 +15,7 @@
       <div class="a-container">
         <a href="../home/index.php" class="a-menu">Inicio</a>
         <a href="../buscador/index.php" class="a-menu">Elegir Cementerio</a>
-        <a href="#" class="a-menu">Contacto</a>
+        <a href="../Contacto/index.html" class="a-menu">Contacto</a>
         <a href="../Tarjeta/index.html" class="a-menu">Tarjeta</a>
       </div>
       <div class="logo-container"><img class="img-logo" src="img/GRAVE.png" alt="logo"></div>
