--- a/GraveFinderCabron/gravefinder/Paginas/Contacto/index.html
+++ b/GraveFinderCabron/gravefinder/Paginas/Contacto/index.html
@@ -8,6 +8,19 @@
 </head>
 <body>
 
+  <header>
+    <!-- Navbar -->
+    <nav class="nav-container">
+      <div class="a-container">
+        <a href="../home/index.php" class="a-menu">Inicio</a>
+        <a href="../buscador/index.php" class="a-menu">Elegir Cementerio</a>
+        <a href="../Contacto/index.html" class="a-menu">Contacto</a>
+        <a href="../Tarjeta/index.html" class="a-menu">Tarjeta</a>
+      </div>
+      <div class="logo-container"><img class="img-logo" src="img/GRAVE.png" alt="logo"></div>
+    </nav>    
+  </header>
+
     <div class="about" id="about">
         <h2 class="title"> Quienes Somos</h2>
 
