--- a/GraveFinderCabron/gravefinder/Paginas/Contacto/index.html
+++ b/GraveFinderCabron/gravefinder/Paginas/Contacto/index.html
@@ -7,6 +7,9 @@
     <title>Contacto</title>
 </head>
 <body>
+
+  <header>
+    <!-- Navbar -->
     <nav class="nav-container">
       <div class="a-container">
         <a href="../home/index.php" class="a-menu">Inicio</a>
@@ -16,6 +19,7 @@
       </div>
       <div class="logo-container"><img class="img-logo" src="img/GRAVE.png" alt="logo"></div>
     </nav>    
+  </header>
 
     <div class="about" id="about">
         <h2 class="title"> Quienes Somos</h2>
